# cube-solver-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  app.js  index.html  serve.py  style.css
.gemini/: instructions.md
.github/: dependabot.yml
.github/workflows/: gh-ci.yml  static.yml
js/: constants.js  editor.js  i18n.js  player.js  pyraminx-editor.js  pyraminx-visualizer.js  rotations.js  theme.js  visualizer.js
src/: lib.rs  pyraminx.rs
tests/: browser_tests.rs  integration_tests.rs  pyraminx_tests.rs
